# Anomaly-Detection-Server

./: .clang-format  AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrainEX6.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  TimeSeries.cpp  TimeSeries.h  TimeSeriesAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle#1.h  minCircle.cpp  minCircle.h  minCircle2.h  minCircle3.h  timeseries.cpp  timeseries.h
oldfiles/: MainTrain1.cpp  MainTrain2.cpp  MainTrainEX4.cpp  MainTrainEX5.cpp  minCircle#2.h
